<resources>
    <string name="loading">加载中</string>
    <string name="live_msg_title">直播消息:</string>
    <string name="live_msg_auction_title">竞拍消息:</string>
    <string name="live_creater_leave">主播离开一下，精彩不中断，不要走开哦</string>
    <string name="live_creater_come_back">主播回来啦，视频即将恢复</string>
    <string name="live_light">点亮了</string>
    <string name="live_send_msg_hint_normal">和大家说点什么</string>
    <string name="live_ticket">钱票</string>
    <string name="live_account">麻辣号</string>
    <string name="live_dirty">发送内容包含敏感字,发送失败</string>
    <string name="live_finish_viewer_one">该直播已结束</string>
    <string name="live_finish_viewer_two">喜欢该主播，不错过TA的任何直播</string>
    <string name="invite_text">向好友发出邀请码：%1$s,好友进入"麻辣LIVE"并成功绑定双方均可获得相应奖励</string>
    <string name="invete_bined_user">邀请您的好友昵称: %1$s  ID: %2$s</string>
    <string name="invete_bind_code">您绑定的邀请码: %1$s</string>
    <string name="lrs_enter_game_not_enough">当前游戏报名人数为%1$s人</string>
    <string name="lrs_enter_game">当前游戏报名人数%1$s人，人数已够，是否开始游戏？</string>
    <string name="lrs_witch_save">%1$s号玩家被狼人杀了，是否救他？</string>
    <string name="lrs_witch_save_self">你被狼人杀了，是否自救？</string>
    <string name="lrs_player">狼人杀当前报名人数：%1$s人，请耐心等待</string>
    <string name="user_already_invited">您已成功邀请到&lt;font color="red"&gt;%1$d&lt;/font&gt;位好友</string>
    <string name="live_account_authentication"></string>
    <string name="affective_state">情感状态</string>
    <string name="failed_to_start_streaming">无法成功开启直播 ！</string>
    <string name="failed_to_start_conference">无法成功开启连麦，错误码：</string>
    <string name="start_streaming">开始直播</string>
    <string name="stop_streaming">停止直播</string>
    <string name="start_conference">开始连麦</string>
    <string name="stop_conference">结束连麦</string>
    <string name="streaming_stopping">正在停止...</string>
    <string name="ready">就绪</string>
    <string name="streaming">直播中...</string>
    <string name="preparing">准备中...</string>
    <string name="disconnected">连接断开</string>
    <string name="stream_state_not_ready">当前不在就绪状态，不能开启直播 ！</string>
    <string name="prepare_title">准备直播</string>
    <string name="prepare_tips">请稍等，直播准备中...</string>
    <string name="failed_open_camera">无法打开摄像头 !</string>
    <string name="failed_open_microphone">无法打开麦克风 !</string>
    <string name="failed_to_publish_av_to_rtc">无法发布视频到房间, 错误码：</string>
    <string name="mute_must_in_streaming_status">必须开始连麦或者推流后才能静音 !</string>
    <string name="success_publish_video_to_rtc">成功发布视频到房间 !</string>
    <string name="success_publish_audio_to_rtc">成功发布音频到房间 !</string>
    <string name="io_error">网络连接错误 !</string>
    <string name="network_disconnected">网络连接断开 !</string>
    <string name="user_join_conference">其他用户加入连麦 !</string>
    <string name="user_leave_conference">其他用户离开连麦 !</string>
    <string name="engine_not_initialized">引擎未初始化 </string>
    <string name="not_join_room">没有加入房间 ！</string>
    <string name="join_room_failed">无法加入房间，错误码：</string>
    <string name="failed_to_connect_rtc_server">无法连接RTC服务器 ！</string>
    <string name="user_join_other_where">用户在其它地方登录 ！</string>
    <string name="user_kickout_by_host">主播断开了与您的连麦 ！</string>
    <string name="pls_input_room_name">请输入房间名称 ！</string>
    <string name="server_not_configure">请先开发服务器端，配置好相关地址</string>
    <string name="app_exit">再按一次退出!</string>
    <string name="save_init_fail">保存init信息失败</string>
    <string name="location_fail">定位失败</string>
    <string name="analysis_location_fail">解析地址失败</string>
    <string name="auth_success">授权成功</string>
    <string name="auth_fail">授权失败</string>
    <string name="auth_cancel">授权取消</string>
    <string name="start_weixin">正在启动微信</string>
    <string name="start_sina">正在启动新浪微博</string>
    <string name="start_QQ">正在启动QQ</string>
    <string name="not_install_sina">您未安装新浪微博客户端</string>
    <string name="not_install_weixin">您未安装微信客户端</string>
    <string name="not_install_QQ">您未安装QQ客户端</string>
    <string name="get_pay_params_fail">获取支付参数失败</string>
    <string name="get_pay_amount_fail">获取充值金额失败</string>
    <string name="tradeNo_is_empty">tradeNo为空</string>
    <string name="tn_is_empty">tn为空</string>
    <string name="order_spec_is_empty">order_spec为空</string>
    <string name="sign_is_empty">sign为空</string>
    <string name="signType_is_empty">signType为空</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_result_confirm">支付结果确认中</string>
    <string name="fail">错误:</string>
    <string name="appId_is_empty">appId为空</string>
    <string name="partnerId_is_empty">partnerId为空</string>
    <string name="prepayId_is_empty">prepayId为空</string>
    <string name="nonceStr_is_empty">nonceStr为空</string>
    <string name="timeStamp_is_empty">timeStamp为空</string>
    <string name="packageValue_is_empty">packageValue为空</string>
    <string name="get_pic_cache_path_fail">得到图片缓存目录失败!</string>
    <string name="data_analysis_exception">数据解析异常</string>
    <string name="not_copy_content">您还未复制内容哦</string>
    <string name="search_suggestion_fail">搜索建议失败</string>
    <string name="search_suggestion_setting_fail">搜索建议参数设置失败</string>
    <string name="analysis_location_setting_fail">地址解析参数设置失败</string>
    <string name="longitude_latitude_analysis_fail">经纬度解析失败</string>
    <string name="longitude_latitude_analysis_setting_fail">经纬度解析参数设置失败</string>
    <string name="check_new_version_fail">检查新版本失败!</string>
    <string name="current_version_is_newest">当前已是最新版本!</string>
    <string name="find_new_version">发现新版本</string>
    <string name="version_update_content">更新内容:</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="is_downloading">正在下载中</string>
    <string name="downloading">下载中</string>
    <string name="download_fail">下载失败</string>
    <string name="download_success">下载完成</string>
    <string name="title_is_empty">title为空</string>
    <string name="content_is_empty">content为空</string>
    <string name="is_sharing">正在分享中</string>
    <string name="unbind">解绑</string>
    <string name="bind">绑定</string>
    <string name="account_security">账号与安全</string>
    <string name="admin_list">管理员列表</string>
    <string name="cancel_admin">取消管理员</string>
    <string name="setting_admin_success">设置管理员成功</string>
    <string name="cancel_admin_success">取消管理员成功</string>
    <string name="cancel_black">解除拉黑</string>
    <string name="no_more_data">没有更多数据了</string>
    <string name="black_list">黑名单</string>
    <string name="this_live">本次直播</string>
    <string name="total_rank">累计排行</string>
    <string name="contribution_list">贡献榜</string>
    <string name="anchor_agreement">主播协议</string>
    <string name="not_find_init_params">未找到初始化参数</string>
    <string name="anchor_agreement_address_empty">主播协议地址为空</string>
    <string name="give_live_title">给直播写个标题吧</string>
    <string name="please_choose">请选择</string>
    <string name="create_room_error">开房出错了,请重试</string>
    <string name="open_location">定位开</string>
    <string name="sina_share_already_open">微博分享已开启</string>
    <string name="cricle_share_already_open">朋友圈分享已开启</string>
    <string name="weixin_share_already_open">微信分享已开启</string>
    <string name="QQ_share_already_open">QQ分享已开启</string>
    <string name="QZone_share_already_open">QQ空间分享已开启</string>
    <string name="please_input_topic">请输入话题</string>
    <string name="mobile_register">手机注册</string>
    <string name="take_photo">拍照</string>
    <string name="gallery">相册</string>
    <string name="please_input_nick_name">请输入昵称</string>
    <string name="nick_name_not_empty">输入的昵称不能为空</string>
    <string name="is_commiting_data">正在提交资料</string>
    <string name="save_user_info_fail">保存用户信息失败</string>
    <string name="user_info_is_empty">user_info字段为空</string>
    <string name="follow_user">关注的人</string>
    <string name="hot_topic">热门话题</string>
    <string name="choose_user_over_100">选取人数不能超过100</string>
    <string name="completed">完成(</string>
    <string name="get_user_info_fail">没有获取到用户信息</string>
    <string name="account_login_other_mobile">你的帐号在另一台手机上登录</string>
    <string name="exit">退出</string>
    <string name="relogin">重新登录</string>
    <string name="please_input_phone_number">请输入手机号码</string>
    <string name="please_input_pic_ver_code">请输入图形验证码</string>
    <string name="please_input_ver_code">请输入验证码</string>
    <string name="is_logining">正在登录</string>
    <string name="phone_bind">手机绑定</string>
    <string name="fans">粉丝</string>
    <string name="push_manage">推送管理</string>
    <string name="recharge">充值</string>
    <string name="pay_by_mala">麻辣币支付</string>
    <string name="please_input_conversion_money">请输入兑换金额</string>
    <string name="is_start_plug_in">正在启动插件</string>
    <string name="paycode_empty">payCode为空</string>
    <string name="sdk_code_empty">sdk_code为空</string>
    <string name="pay_empty">pay为空</string>
    <string name="please_choose_pay_way">请选择支付方式</string>
    <string name="pic_not_exist">图片不存在</string>
    <string name="upload_pic">上传图片</string>
    <string name="upload">上传</string>
    <string name="clip_pic">裁剪图片</string>
    <string name="save">保存</string>
    <string name="is_dispose_pic">正在处理图片</string>
    <string name="is_uploading">正在上传</string>
    <string name="upload_fail">上传失败</string>
    <string name="search_user_topic">搜索用户或话题</string>
    <string name="user">用户</string>
    <string name="topic">话题</string>
    <string name="remove">删除</string>
    <string name="topic_id_empty">话题id为空</string>
    <string name="pic_path_empty">图片地址为空</string>
    <string name="upload_auth_pic">上传认证图片</string>
    <string name="user_empty">user为空</string>
    <string name="upload_head_portrait">上传头像</string>
    <string name="compile">编辑</string>
    <string name="mala_star">麻辣星球</string>
    <string name="copy_success">复制成功</string>
    <string name="gender_not_compile_many_times">性别不能多次编辑</string>
    <string name="please_choose_birth_day">请选择出生日期</string>
    <string name="is_saving_pic">正在保存图片</string>
    <string name="save_success">保存成功</string>
    <string name="home_page">主页</string>
    <string name="front_page">首页</string>
    <string name="guide">指引</string>
    <string name="box_bar">箱吧</string>
    <string name="live">直播</string>
    <string name="pool">奖金池：</string>
    <string name="already_follow">已关注</string>
    <string name="follow">关注</string>
    <string name="relive_black">解除拉黑</string>
    <string name="pull_black">拉黑</string>
    <string name="forget_write_signature">TA好像忘记写签名了</string>
    <string name="my_live">我的直播</string>
    <string name="newest">最新</string>
    <string name="hotest">最热</string>
    <string name="tipoff">举报</string>
    <string name="can_not_say">禁言</string>
    <string name="setting_admin">设置管理员</string>
    <string name="level_privilege">等级特权</string>
    <string name="rank_top">排名靠前</string>
    <string name="box_addition">宝箱加成</string>
    <string name="color_pop">颜色弹幕</string>
    <string name="special_pop">特殊弹幕</string>
    <string name="level_high_rank_top">等级越高，在直播间排序更前</string>
    <string name="watch_live">看直播</string>
    <string name="every_day_watch_live_get_experience">每天打开看直播的时候，都会自动获得经验值</string>
    <string name="get_box">领宝箱</string>
    <string name="every_box_can_get_experience">直播间的百宝箱里，各个都有经验值哦</string>
    <string name="send_gift">送礼物</string>
    <string name="every_gift_can_diff_experience">每款礼物都有不同的经验值，快去送给主播吧</string>
    <string name="do_task">道具TOP</string>
    <string name="every_task_can_get_experience">每天完成简单的任务，都可获得经验值奖励</string>
    <string name="main_task">主线任务</string>
    <string name="experience_high">经验奖励高</string>
    <string name="day_task">日常任务</string>
    <string name="every_day_must_do">每日必做</string>
    <string name="other_task">其他任务</string>
    <string name="active_task">活动任务</string>
    <string name="go_to_do">去完成</string>
    <string name="mine">我的</string>
    <string name="is_completed">已完成</string>
    <string name="detail">详情</string>
    <string name="get">领取</string>
    <string name="chat_room">聊天室</string>
</resources>