<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_root_layout"
              android:layout_width="match_parent"
              android:layout_height="160dp"
                android:background="#6e6e6e"
              android:orientation="vertical">
    <TextView
        android:id="@+id/tv_tip_off"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/tipoff"/>

    <TextView
        android:id="@+id/tv_setting_manager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/setting_admin"/>
    <TextView
        android:id="@+id/tv_manager_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/admin_list"/>
    <TextView
        android:id="@+id/tv_forbid_speak"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/can_not_say"/>
    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/gray_d"
        android:text="@string/cancel"/>
</LinearLayout>