<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    android:orientation="vertical"
    >

    <com.fanwe.live.appview.UserLevelTopView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <LinearLayout
            android:id="@+id/ll_tab_main"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_task_main"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_task_main_gray"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#fff"
                android:text="@string/main_task"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textColor="#8d8b8b"
                android:text="@string/experience_high"/>
        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#383b3c"/>
        <LinearLayout
            android:id="@+id/ll_tab_day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_task_day"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_task_day_gray"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#fff"
                android:text="@string/day_task"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textColor="#8d8b8b"
                android:text="@string/every_day_must_do"/>
        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#383b3c"/>
        <LinearLayout
            android:id="@+id/ll_tab_other"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_task_other"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_task_other_gray"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#fff"
                android:text="@string/other_task"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textColor="#8d8b8b"
                android:text="@string/active_task"/>
        </LinearLayout>
    </LinearLayout>

    <com.fanwe.library.customview.SDViewPager
        android:id="@+id/vpg_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
</LinearLayout>
